Ajout d'un readme et du root

--- a/formulaire.html
+++ b/formulaire.html
@@ -20,14 +20,14 @@
         <section>
             <h2>Plus qu'à remplir ce formulaire pour profiter de cette offre, <a href="#formulaire">FONCEZ</a> !</h2>
             <ul id="container">
-                <li><img src="./asset/p_junglecruise_19736_5a2634c5.webp" alt=""></li>
-                <li><img src="./asset/p_dumbo_19753_7f6610fc.jpeg" alt=""></li>
-                <li><img src="./asset/p_coco_19736_fd5fa537.webp" alt=""></li>
-                <li><img src="./asset/p_captainmarvel_19755_3a1675ee.webp" alt=""></li>
-                <li><img src="./asset/p_blackpanther_19754_4ac13f07.webp" alt=""></li>
-                <li><img src="./asset/p_avengersendgame_19751_e14a0104.webp" alt=""></li>
-                <li><img src="./asset/image_bf8739ba.jpeg" alt=""></li>
-                <li><img src="./asset/image_ed3b87cc.webp" alt=""></li>
+                <li><img src="./asset/p_junglecruise_19736_5a2634c5.webp" alt="Afiche de film"></li>
+                <li><img src="./asset/p_dumbo_19753_7f6610fc.jpeg" alt="Afiche de film"></li>
+                <li><img src="./asset/p_coco_19736_fd5fa537.webp" alt="Afiche de film"></li>
+                <li><img src="./asset/p_captainmarvel_19755_3a1675ee.webp" alt="Afiche de film"></li>
+                <li><img src="./asset/p_blackpanther_19754_4ac13f07.webp" alt="Afiche de film"></li>
+                <li><img src="./asset/p_avengersendgame_19751_e14a0104.webp" alt="Afiche de film"></li>
+                <li><img src="./asset/image_bf8739ba.jpeg" alt="Afiche de film"></li>
+                <li><img src="./asset/image_ed3b87cc.webp" alt="Afiche de film"></li>
             </ul>
         </section>
         
@@ -38,14 +38,14 @@
                 <input type="text" placeholder="Nom" name="nom" id="nom">
 
                 <label for="prenom">Prénom</label>
-                <input type="text" placeholder="Prénom" name="prénom" id="prénom">
+                <input type="text" placeholder="Prénom" name="prénom" id="prenom">
 
                 <label for="email">E-mail</label>
                 <input type="text" placeholder="E-mail" name="email" id="email">
 
                 <label for="Ville">Ville</label>
                 <select id="Ville" name="Ville">
-                    <option value="Selelct City">Ville</option>
+                    <option value="Selelct City" id="ville">Ville</option>
                     <option value="Paris">Paris</option>
                     <option value="Marseille">Marseille</option>
                     <option value="Lyon">Lyon</option>
@@ -151,7 +151,7 @@
 
                 <label for="Ville">Pays</label>
                 <select id="country" name="country">
-                    <option value="Select Country">Pays</option>
+                    <option value="Select Country" id="pays">Pays</option>
                     <option value="Afghanistan">Afghanistan</option>
                     <option value="Åland Islands">Åland Islands</option>
                     <option value="Albania">Albania</option>
