--- a/index.html
+++ b/index.html
@@ -18,30 +18,29 @@
     </header>
     <main>
         <section>
-            <h2>Prêt à regarder ? Remplissez le formulaire proposé en bas de cette page</h3>
+            <h2>Prêt à regarder ? Remplissez le formulaire proposé en bas de cette page</h2>
         </section>
-    </section>
     <section>    
         <h3>Tous les mois profitez de toutes les nouveautés série et cinéma. à partir du mois <br>
             prochain on vous propose tous les classiques du cinéma. Où que vous soyez. Tous <br>
             les films en VO, VOST, VF et plus d'options</h3>
         <ul id="container">
-            <li><img src="./asset/image_07df35d0.jpeg" alt=""></li>
-            <li><img src="./asset/image_1963b116.webp" alt=""></li>
-            <li><img src="./asset/image_29954e00.webp" alt=""></li>
-            <li><img src="./asset/image_2ff75a5c.webp"></li>
-            <li><img src="./asset/image_34043567.jpeg" alt=""></li>
-            <li><img src="./asset/image_3eaef468.webp" alt=""></li>
-            <li><img src="./asset/image_448f9b9a.webp" alt=""></li>
-            <li><img src="./asset/image_517b1d6c.webp" alt=""></li>
-            <li><img src="./asset/image_659514fa.webp" alt=""></li>
-            <li><img src="./asset/image_7ff71125.jpeg" alt=""></li>
-            <li><img src="./asset/image_81290b71.jpeg"></li>
-            <li><img src="./asset/image_83011738.jpeg" alt=""></li>
-            <li><img src="./asset/image_85dfaa4f.webp"></li>
-            <li><img src="./asset/image_8b806cc0.webp" alt=""></li>
-            <li><img src="./asset/image_91dda2d1.jpeg" alt=""></li>
-            <li><img src="./asset/image_9e35a739.webp" alt=""></li>
+            <li><img src="./asset/image_07df35d0.jpeg" alt="Afiche de film"></li>
+            <li><img src="./asset/image_1963b116.webp" alt="Afiche de film"></li>
+            <li><img src="./asset/image_29954e00.webp" alt="Afiche de film"></li>
+            <li><img src="./asset/image_2ff75a5c.webp" alt="Afiche de film"></li>
+            <li><img src="./asset/image_34043567.jpeg" alt="Afiche de film"></li>
+            <li><img src="./asset/image_3eaef468.webp" alt="Afiche de film"></li>
+            <li><img src="./asset/image_448f9b9a.webp" alt="Afiche de film"></li>
+            <li><img src="./asset/image_517b1d6c.webp" alt="Afiche de film"></li>
+            <li><img src="./asset/image_659514fa.webp" alt="Afiche de film"></li>
+            <li><img src="./asset/image_7ff71125.jpeg" alt="Afiche de film"></li>
+            <li><img src="./asset/image_81290b71.jpeg" alt="Afiche de film"></li>
+            <li><img src="./asset/image_83011738.jpeg" alt="Afiche de film"></li>
+            <li><img src="./asset/image_85dfaa4f.webp" alt="Afiche de film"></li>
+            <li><img src="./asset/image_8b806cc0.webp" alt="Afiche de film"></li>
+            <li><img src="./asset/image_91dda2d1.jpeg" alt="Afiche de film"></li>
+            <li><img src="./asset/image_9e35a739.webp" alt="Afiche de film"></li>
         </ul>
     </section>
         <nav>
