--- a/index.html
+++ b/index.html
@@ -8,48 +8,300 @@
     <title>Netflix France - Regardez des séries TV en ligne, Regardez des films en ligne</title>
     <link rel="stylesheet" href="./css/Reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="./asset/favicon-32x32.png">
 </head>
 
 <body>
     <header>
-        <img class="image" src="./asset/netflix_official_logo_icon_168085.ico" alt="logo netflix">
-       <h1>Films, série TV et bien plus en illimité</h1>
+        <img class="img" src="./asset/netflix_official_logo_icon_168085.ico" alt="logo netflix">
+        <h1>Films, série TV et bien plus en illimité</h1>
     </header>
     <main>
-        <section>
             <h2>Prêt à regarder ? Remplissez le formulaire proposé en bas de cette page</h2>
-        </section>
-    <section>    
-        <h3>Tous les mois profitez de toutes les nouveautés série et cinéma. à partir du mois <br>
-            prochain on vous propose tous les classiques du cinéma. Où que vous soyez. Tous <br>
-            les films en VO, VOST, VF et plus d'options</h3>
-        <ul id="container">
-            <li><img src="./asset/image_07df35d0.jpeg" alt="Afiche de film"></li>
-            <li><img src="./asset/image_1963b116.webp" alt="Afiche de film"></li>
-            <li><img src="./asset/image_29954e00.webp" alt="Afiche de film"></li>
-            <li><img src="./asset/image_2ff75a5c.webp" alt="Afiche de film"></li>
-            <li><img src="./asset/image_34043567.jpeg" alt="Afiche de film"></li>
-            <li><img src="./asset/image_3eaef468.webp" alt="Afiche de film"></li>
-            <li><img src="./asset/image_448f9b9a.webp" alt="Afiche de film"></li>
-            <li><img src="./asset/image_517b1d6c.webp" alt="Afiche de film"></li>
-            <li><img src="./asset/image_659514fa.webp" alt="Afiche de film"></li>
-            <li><img src="./asset/image_7ff71125.jpeg" alt="Afiche de film"></li>
-            <li><img src="./asset/image_81290b71.jpeg" alt="Afiche de film"></li>
-            <li><img src="./asset/image_83011738.jpeg" alt="Afiche de film"></li>
-            <li><img src="./asset/image_85dfaa4f.webp" alt="Afiche de film"></li>
-            <li><img src="./asset/image_8b806cc0.webp" alt="Afiche de film"></li>
-            <li><img src="./asset/image_91dda2d1.jpeg" alt="Afiche de film"></li>
-            <li><img src="./asset/image_9e35a739.webp" alt="Afiche de film"></li>
-        </ul>
-    </section>
-        <nav>
-            <a href="formulaire.html">Cliquez ici pour commencer</a>
-        </nav>
+            <h3 class="first-title">Tous les mois profitez de toutes les nouveautés série et cinéma. à partir du mois <br>
+                prochain on vous propose tous les classiques du cinéma. Où que vous soyez. Tous <br>
+                les films en VO, VOST, VF et plus d'options</h3>
+
+            <ul class="grid-picture-large">
+                <li data-image="./asset/image_07df35d0.jpeg" data-title="Ant-Man et la guèpe"
+                    data-description="c'est un film épatant, entre action et émotion..." data-dates="02/01/2020">
+                    <figure>
+                        <img src="./asset/image_07df35d0.jpeg" alt="affiche de film">
+                        <figcaption>
+                            <h2>
+                                <i class="material-icons" aria-hidden="true">
+                                    pages
+                                </i>
+                                Agrandir
+
+                            </h2>
+                        </figcaption>
+
+                    </figure>
+                </li>
+                <li data-image="./asset/image_1963b116.webp" data-title="Raya et Le dernier dragon"
+                    data-description="c'est un film épatant, entre action et émotion..." data-dates="02/01/2020">
+                    <figure>
+                        <img src="./asset/image_1963b116.webp" alt="affiche de film">
+                        <figcaption>
+                            <h2>
+                                <i class="material-icons" aria-hidden="true">
+                                    pages
+                                </i>
+                                Agrandir
+
+                            </h2>
+                        </figcaption>
+
+                    </figure>
+                </li>
+                <li data-image="./asset/image_29954e00.webp" data-title="Le retour de Mary Poppins"
+                    data-description="c'est un film épatant, entre action et émotion..." data-dates="02/01/2020">
+                    <figure>
+                        <img src="./asset/image_29954e00.webp" alt="affiche de film">
+                        <figcaption>
+                            <h2>
+                                <i class="material-icons" aria-hidden="true">
+                                    pages
+                                </i>
+                                Agrandir
+
+                            </h2>
+                        </figcaption>
+
+                    </figure>
+                </li>
+                <li data-image="./asset/image_2ff75a5c.webp" data-title="Luca"
+                    data-description="c'est un film épatant, entre action et émotion..." data-dates="02/01/2020">
+                    <figure>
+                        <img src="./asset/image_2ff75a5c.webp" alt="affiche de film">
+                        <figcaption>
+                            <h2>
+                                <i class="material-icons" aria-hidden="true">
+                                    pages
+                                </i>
+                                Agrandir
+
+                            </h2>
+                        </figcaption>
+
+                    </figure>
+                </li>
+                <li data-image="./asset/image_34043567.jpeg" data-title="Alerte Rouge"
+                    data-description="c'est un film épatant, entre action et émotion..." data-dates="02/01/2020">
+                    <figure>
+                        <img src="./asset/image_34043567.jpeg" alt="affiche de film">
+                        <figcaption>
+                            <h2>
+                                <i class="material-icons" aria-hidden="true">
+                                    pages
+                                </i>
+                                Agrandir
+
+                            </h2>
+                        </figcaption>
+
+                    </figure>
+                </li>
+                <li data-image="./asset/image_3eaef468.webp" data-title="Avengers"
+                    data-description="c'est un film épatant, entre action et émotion..." data-dates="02/01/2020">
+                    <figure>
+                        <img src="./asset/image_3eaef468.webp" alt="affiche de film">
+                        <figcaption>
+                            <h2>
+                                <i class="material-icons" aria-hidden="true">
+                                    pages
+                                </i>
+                                Agrandir
+
+                            </h2>
+                        </figcaption>
+
+                    </figure>
+                </li>
+                <li data-image="./asset/image_448f9b9a.webp" data-title="Casse-Noisette et les Quatres royaumes"
+                    data-description="c'est un film épatant, entre action et émotion..." data-dates="02/01/2020">
+                    <figure>
+                        <img src="./asset/image_448f9b9a.webp" alt="affiche de film">
+                        <figcaption>
+                            <h2>
+                                <i class="material-icons" aria-hidden="true">
+                                    pages
+                                </i>
+                                Agrandir
+
+                            </h2>
+                        </figcaption>
+
+                    </figure>
+                </li>
+                <li data-image="./asset/image_517b1d6c.webp" data-title="Stars Wars"
+                    data-description="c'est un film épatant, entre action et émotion..." data-dates="02/01/2020">
+                    <figure>
+                        <img src="./asset/image_517b1d6c.webp" alt="affiche de film">
+                        <figcaption>
+                            <h2>
+                                <i class="material-icons" aria-hidden="true">
+                                    pages
+                                </i>
+                                Agrandir
+
+                            </h2>
+                        </figcaption>
+
+                    </figure>
+                </li>
+                <li data-image="./asset/image_659514fa.webp" data-title="Docteur Strange"
+                    data-description="c'est un film épatant, entre action et émotion..." data-dates="02/01/2020">
+                    <figure>
+                        <img src="./asset/image_659514fa.webp" alt="affiche de film">
+                        <figcaption>
+                            <h2>
+                                <i class="material-icons" aria-hidden="true">
+                                    pages
+                                </i>
+                                Agrandir
+
+                            </h2>
+                        </figcaption>
+
+                    </figure>
+                </li>
+                <li data-image="./asset/image_7ff71125.jpeg" data-title="Cruella"
+                    data-description="c'est un film épatant, entre action et émotion..." data-dates="02/01/2020">
+                    <figure>
+                        <img src="./asset/image_7ff71125.jpeg" alt="affiche de film">
+                        <figcaption>
+                            <h2>
+                                <i class="material-icons" aria-hidden="true">
+                                    pages
+                                </i>
+                                Agrandir
+
+                            </h2>
+                        </figcaption>
+
+                    </figure>
+                </li>
+                <li data-image="./asset/image_81290b71.jpeg" data-title="Artemis Fowl"
+                    data-description="c'est un film épatant, entre action et émotion..." data-dates="02/01/2020">
+                    <figure>
+                        <img src="./asset/image_81290b71.jpeg" alt="affiche de film">
+                        <figcaption>
+                            <h2>
+                                <i class="material-icons" aria-hidden="true">
+                                    pages
+                                </i>
+                                Agrandir
+
+                            </h2>
+                        </figcaption>
+
+                    </figure>
+                </li>
+                <li data-image="./asset/image_83011738.jpeg" data-title="Stars Wars"
+                    data-description="c'est un film épatant, entre action et émotion..." data-dates="02/01/2020">
+                    <figure>
+                        <img src="./asset/image_83011738.jpeg" alt="affiche de film">
+                        <figcaption>
+                            <h2>
+                                <i class="material-icons" aria-hidden="true">
+                                    pages
+                                </i>
+                                Agrandir
+
+                            </h2>
+                        </figcaption>
+
+                    </figure>
+                </li>
+                <li data-image="./asset/image_85dfaa4f.webp" data-title="Encanto"
+                    data-description="c'est un film épatant, entre action et émotion..." data-dates="02/01/2020">
+                    <figure>
+                        <img src="./asset/image_85dfaa4f.webp" alt="affiche de film">
+                        <figcaption>
+                            <h2>
+                                <i class="material-icons" aria-hidden="true">
+                                    pages
+                                </i>
+                                Agrandir
+
+                            </h2>
+                        </figcaption>
+
+                    </figure>
+                </li>
+                <li data-image="./asset/image_8b806cc0.webp" data-title="Jean-Christophe & Winnie"
+                    data-description="c'est un film épatant, entre action et émotion..." data-dates="02/01/2020">
+                    <figure>
+                        <img src="./asset/image_8b806cc0.webp" alt="affiche de film">
+                        <figcaption>
+                            <h2>
+                                <i class="material-icons" aria-hidden="true">
+                                    pages
+                                </i>
+                                Agrandir
+
+                            </h2>
+                        </figcaption>
+
+                    </figure>
+                </li>
+                <li data-image="./asset/image_91dda2d1.jpeg" data-title="Reine des neiges 2"
+                    data-description="c'est un film épatant, entre action et émotion..." data-dates="02/01/2020">
+                    <figure>
+                        <img src="./asset/image_91dda2d1.jpeg" alt="affiche de film">
+                        <figcaption>
+                            <h2>
+                                <i class="material-icons" aria-hidden="true">
+                                    pages
+                                </i>
+                                Agrandir
+
+                            </h2>
+                        </figcaption>
+
+                    </figure>
+                </li>
+                <li data-image="./asset/image_9e35a739.webp" data-title="Aladdin"
+                    data-description="c'est un film épatant, entre action et émotion..." data-dates="02/01/2020">
+                    <figure>
+                        <img src="./asset/image_9e35a739.webp" alt="affiche de film">
+                        <figcaption>
+                            <h2>
+                                <i class="material-icons" aria-hidden="true">
+                                    pages
+                                </i>
+                                Agrandir
+
+                            </h2>
+                        </figcaption>
+
+                    </figure>
+                </li>
+            </ul>
+        <a href="formulaire.html">Cliquez ici pour commencer</a>
+        <!-- modale -->
+        <div class="parent-modale" role="dialog" aria-label="true">
+            <figure class="modale">
+                <button aria-label="closed">
+                    <span class="material-icons">clear</span>
+                </button>
+                <img class="image" src="https://via.placeholder.com/500" alt="picture" />
+                <figcaption class="desc">
+                    <h3 class="second-title">title</h3>
+                    <p> </p>
+                    <time>Years : </time>
+                </figcaption>
+            </figure>
+        </div>
+
     </main>
     <footer>
-        <p>@ - Streaming - 2022</p>
+        <p>© - Streaming - 2022</p>
     </footer>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
