--- a/formulaire.html
+++ b/formulaire.html
@@ -16,6 +16,7 @@
     <header>
         <img src="./asset/netflix_official_logo_icon_168085.ico" alt="logo netflix">
         <h1>Films, série TV et bien plus en illimité</h1>
+        <span class="material-icons md-48">dark_mode</span>
     </header>
     <main>
         <h2>Plus qu'à remplir ce formulaire pour profiter de cette offre, <a href="#formulaire">FONCEZ</a> !</h2>
@@ -398,8 +399,6 @@
                 <option value="Kazakhstan">Kazakhstan</option>
                 <option value="Kenya">Kenya</option>
                 <option value="Kiribati">Kiribati</option>
-                <option value="Korea, Democratic People's Republic of">Korea, Democratic People's Republic of
-                </option>
                 <option value="Korea, Republic of">Korea, Republic of</option>
                 <option value="Kuwait">Kuwait</option>
                 <option value="Kyrgyzstan">Kyrgyzstan</option>
@@ -413,9 +412,6 @@
                 <option value="Lithuania">Lithuania</option>
                 <option value="Luxembourg">Luxembourg</option>
                 <option value="Macao">Macao</option>
-                <option value="Macedonia, The Former Yugoslav Republic of">Macedonia, The Former Yugoslav Republic
-                    of
-                </option>
                 <option value="Madagascar">Madagascar</option>
                 <option value="Malawi">Malawi</option>
                 <option value="Malaysia">Malaysia</option>
@@ -488,8 +484,6 @@
                 <option value="Solomon Islands">Solomon Islands</option>
                 <option value="Somalia">Somalia</option>
                 <option value="South Africa">South Africa</option>
-                <option value="South Georgia and The South Sandwich Islands">South Georgia and The South Sandwich
-                    Islands</option>
                 <option value="Spain">Spain</option>
                 <option value="Sri Lanka">Sri Lanka</option>
                 <option value="Sudan">Sudan</option>
@@ -540,6 +534,7 @@
         <p>@ - Streaming - 2022</p>
     </footer>
     <script src="./js/app.js"></script>
+    <script src="./js/light_mode.js"></script>
 </body>
 
 
