--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix France - Regardez des séries TV en ligne, Regardez des films en ligne</title>
-    <link rel="stylesheet" href="./css/Reset.css">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="./asset/favicon-32x32.png">
@@ -19,8 +19,8 @@
         <span class="material-icons md-48">dark_mode</span>
     </header>
     <main>
-        <h2>Prêt à regarder ? Remplissez le formulaire proposé en bas de cette page</h2>
-        <h3 class="third title">Tous les mois profitez de toutes les nouveautés série et cinéma. à partir du mois <br>
+        <h2 class="title">Prêt à regarder ? Remplissez le formulaire proposé en bas de cette page</h2>
+        <h3 class="third_title">Tous les mois profitez de toutes les nouveautés série et cinéma. à partir du mois <br>
             prochain on vous propose tous les classiques du cinéma. Où que vous soyez. Tous <br>
             les films en VO, VOST, VF et plus d'options</h3>
 
