--- a/formulaire.html
+++ b/formulaire.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix</title>
-    <link rel="stylesheet" href="./css/Reset.css">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/formulaire.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="./asset/favicon-32x32.png">
@@ -19,7 +19,7 @@
         <span class="material-icons md-48">dark_mode</span>
     </header>
     <main>
-        <h2>Plus qu'à remplir ce formulaire pour profiter de cette offre, <a href="#formulaire">FONCEZ</a> !</h2>
+        <h2 class="title">Plus qu'à remplir ce formulaire pour profiter de cette offre, <a href="#formulaire">FONCEZ</a> !</h2>
         <ul class="grid-picture-large">
             <li data-image=".\asset\image_fd5a505b (1).webp" data-title="Shang-Chi la légende des dix anneaux"
                 data-description="c'est un film épatant, entre action et émotion..." data-dates="02/01/2020">
