--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="icon" type="image/png" sizes="32x32" href="./asset/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./asset/ico/favicon-32x32.png">
 </head>
 
 <body>
     <header>
-        <img src="./asset/netflix_official_logo_icon_168085.ico" alt="logo netflix">
+        <img src="./asset/ico/netflix_official_logo_icon_168085.ico" alt="logo netflix">
         <h1>Films, série TV et bien plus en illimité</h1>
         <span class="material-icons md-48">dark_mode</span>
     </header>
